# aoc

./: Cargo.toml
daily-template/: Cargo.toml
day-01/: Cargo.toml
day-01/src/: lib.rs  main.rs  part1.rs
