[workspace]
resolver = "2"

members = ["day-*"]
default-members = ["day-*"]

[workspace.dependencies]
glam = "0.25.0"
itertools = "0.12.0"
nom = "7.1.3"
petgraph = "0.6.4"
rayon = "1.8.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
rstest = "0.18.2"
rstest_reuse = "0.6.0"
divan = "0.1.8"
tracing-tracy = "0.10.4"
tracy-client = "0.16.4"
tracy-client-sys = "0.22.0"
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0.56"
dhat = "0.3.2"
criterion = { version = "0.5.1", features = ["html_reports"] }
nom_locate = "4.2.0"
nom-supreme = "0.8.0"
test-log = { version = "0.2.14", default-features = false, features = [
    "trace",
] }
indicatif = { version = "0.17.7", features = ["rayon"] }


[profile.dhat]
inherits = "release"
debug = 1
